@@ -1,4 +1,8 @@
-########  2013-1-15   #########
+########  2013-2-21   #########
+alter table shop_trades_mergetrade add column return_out_sid varchar(64) NOT NULL;
+create index index_mergetrade_return_out_sid on shop_trades_mergetrade(return_out_sid);
+alter table shop_trades_mergetrade add column return_logistic_company varchar(64) NOT NULL;
+########  2013-2-20   #########
 alter table shop_trades_mergetrade add column weight_time datetime DEFAULT NULL;
 (update shop_trades_mergetrade set weight_time = consign_time;)
 ########  2013-1-15   #########
